# EMIx

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: test-code-docker.yml  test-code.yml
benchmarks/: README.md  ksp_view.txt  model_A.py  model_B.py  model_C.py  model_D.py
benchmarks/emi_spectral/: EMI_spectral.py  config.yml  download_mesh.py  plot_solution.py
benchmarks/emi_spectral/configfiles/: config_100cells_10mu.yml  config_10cells_10mu.yml  config_10cells_5mu.yml  config_200cells_10mu.yml  (+1 more)
benchmarks/output/: solution.xdmf  subdomains.h5
data/: README.md  generate_mesh.py  inflate.py
data/cube/: cube_facets20.h5  cube_facets20.xdmf  cube_regions20.h5  cube_regions20.xdmf
data/myelin/: _.csv  _.msh  extracellular.stl  facets0.h5  facets0.xdmf  generate_mesh.py  intracellular.stl  mesh.h5  mesh.xdmf  mesh0.h5  mesh0.xdmf  myelin.stl
examples/: EMI_example.py  KNPEMI_example.py  README.md  config.yml  test.py
scripts/: SAGA.txt  convert_to_dolfin_mesh.py  create_sparse_mat_from_data.m  example_bounding_sphere.py  example_convex_hull.py  read_matrices.m  run.sh
src/EMI/: EMI_ionic_model.py  EMI_problem.py  EMI_solver.py  example.py  main.py
src/EMIx/: __init__.py
src/KNPEMI/: KNPEMI_ionic_model.py  KNPEMI_problem.py  KNPEMI_solver.py  main.py  potassium_buffering.py
src/tests/: EMI_test.py  KNPEMI_KSP_test.py  KNPEMI_test.py  block_poisson.py  config.yml  conftest.py  heat.py  parallel_MeshView.py  parallel_MeshView2.py  poisson.py  test.py
src/utils/: utils.py
tests/: EMI_test.py
(+103 files in other folders)
