[project]
name = "EMIx"
version = "0.0.1"
requires-python = ">=3.8"

# Path to README.md
readme = "README.md"

# Path to license file
license = {file = "LICENSE"}

# Direct dependencies
dependencies = [
    'multiphenics',
    'matplotlib',
    'scipy'
]

# testing markers (optional)
[tool.pytest.ini_options]
markers = [
    "serial: serial test.",
    "mpi: parallel test."
]

